--- a/package.json
+++ b/package.json
@@ -1,53 +1,29 @@
 {
-  "name": "MongoDb-CRUD",
+  "name": "express-mongodb-api",
   "version": "1.0.0",
-  "description": "Node Express TypeScript Prisma ORM MongoDB REST API",
-  "main": "index.js",
+  "description": "Minimal Express + Mongoose + TypeScript REST API",
+  "main": "dist/index.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts",
-    "build": "tsc -p .",
+    "dev": "nodemon",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
-  "keywords": [
-    "node",
-    "express",
-    "typescript",
-    "prisma",
-    "mongodb",
-    "rest-api"
-  ],
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.3.2"
+  },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.7",
+    "@types/mongoose": "^5.11.97",
     "nodemon": "^3.1.4",
-    "prettier-plugin-prisma": "^5.0.0",
-    "prisma": "^5.15.1",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.2"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.15.1",
-    "@types/bcrypt": "^5.0.2",
-    "@types/compression": "^1.7.5",
-    "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/multer": "^1.4.11",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-async-handler": "^1.2.0",
-    "express-rate-limit": "^7.3.1",
-    "express-validator": "^7.1.0",
-    "helmet": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "moment": "^2.30.1",
-    "multer": "^1.4.5-lts.1",
-    "uuid": "^10.0.0"
   }
 }
